--- a/conceptos_css/styles.pug
+++ b/conceptos_css/styles.pug
@@ -9,6 +9,8 @@ html(lang="es")
     body
         header
         main
-            p hola mundo feliz
-            p hola mundo
+            p conejo 
+            p 🐶 perro 
+            p 🐄 vaca
+            p 🐸 sapo
         footer
