--- a/conceptos_css/modelo_de_caja.pug
+++ b/conceptos_css/modelo_de_caja.pug
@@ -7,7 +7,8 @@ html(lang="es")
         link(rel="stylesheet", href="css/sass.css")
         title modelo de caja 
     body 
-        header 
+        header
+            img(src="https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png", alt="logo de platzi.com")
         main 
             .caja
             .caja2
