--- a/conceptos_css/css/sass.css
+++ b/conceptos_css/css/sass.css
@@ -14,3 +14,17 @@
   height: 30px;
   background-color: #D5EEBB;
 }
+
+body {
+  margin: 0px;
+}
+
+header {
+  width: 100%;
+  height: 80px;
+  background-color: #21C08B;
+}
+header img {
+  width: 200px;
+  margin: 9px 0px;
+}
