--- a/conceptos_css/css/sass.scss
+++ b/conceptos_css/css/sass.scss
@@ -35,3 +35,19 @@
     height: 30px;
     background-color: #D5EEBB;
 }
+
+//////////////clase valores relativos y absolutos///////
+
+body {
+    margin: 0px;
+}
+
+header {
+    width: 100%;
+    height: 80px;
+    background-color: #21C08B;
+    img {
+        width: 200px;
+        margin: 9px 0px;
+    }
+}
