--- a/arquitectura_css/bem.pug
+++ b/arquitectura_css/bem.pug
@@ -7,7 +7,7 @@ html
         link(rel = "stylesheet", href = "css/style.css")
         title bem
     body
-        
+        //- block element modifier 
         header.header
             button.header__button--red red 
             button.header__button--yellow yellow
