--- a/componentes_css/css/componentes/carousel.scss
+++ b/componentes_css/css/componentes/carousel.scss
@@ -28,7 +28,7 @@
         &__details {
             background: linear-gradient(to top, rgba(0,0,0,.9) 0%, rgba(0,0,0,0) 100%);
             font-size: 1rem;
-            opacity: 1;
+            opacity: 0;
             transition: 450ms opacity;
             padding: 10px;
             position: absolute;
@@ -36,8 +36,23 @@
             top: 0;
             bottom: 0;
             right: 0;
+            p {
+                margin: 0px;
+            }
             &--title p {
                 color: $color-claro;
+            }
+            display: flex;
+            justify-content: flex-end;
+            flex-direction: column;
+            img {
+                height:15px;
+                width: 15px;
+            }
+            &:hover {
+                opacity: 1;
+                color: $color-claro;
+
             }
         }
 
@@ -53,6 +68,4 @@
         transform: scale(1.5);
         opacity: 1;
     }
-
-
 }
