--- a/componentes_css/css/style.css
+++ b/componentes_css/css/style.css
@@ -151,7 +151,7 @@ body {
   background: -webkit-gradient(linear, left bottom, left top, from(rgba(0, 0, 0, 0.9)), to(rgba(0, 0, 0, 0)));
   background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
   font-size: 1rem;
-  opacity: 1;
+  opacity: 0;
   -webkit-transition: 450ms opacity;
   transition: 450ms opacity;
   padding: 10px;
@@ -160,8 +160,29 @@ body {
   top: 0;
   bottom: 0;
   right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.carousel-item__details p {
+  margin: 0px;
 }
 .carousel-item__details--title p {
+  color: white;
+}
+.carousel-item__details img {
+  height: 15px;
+  width: 15px;
+}
+.carousel-item__details:hover {
+  opacity: 1;
   color: white;
 }
 .carousel-item:hover ~ .carousel-item {
