log in and sign up pages done

--- a/componentes_css/css/componentes/iniciar-sesion.scss
+++ b/componentes_css/css/componentes/iniciar-sesion.scss
@@ -9,7 +9,7 @@ $color-fondo: #21C08B;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: center;
+    flex-direction: column;
     min-height: calc(100vh - 200px);
 }
 
