--- a/componentes_css/pug/iniciar-sesion.pug
+++ b/componentes_css/pug/iniciar-sesion.pug
@@ -22,18 +22,14 @@ html(lang="es")
                     section.login__container--social-media 
                         div 
                             img(src="../imagenes/logo-google.jpeg", alt="Google")
-                            a(href="/") 
+                            //- a(href="/") 
                             |Iniciar Sesión con Google 
                         div 
                             img(src="../imagenes/logo-twitter.png", alt="Twitter")
-                            a(href="")
+                            //- a(href="")
                             |Iniciar Sesión con Twitter
                     p.login__container--register No tienes ninguna cuenta 
                      a(href="/") Regístrate 
-
-        footer
-            a(href="/") Términos de uso
-            a(href="/") Declaración de privacidad
-            a(href="/") Centro de ayuda
+        include footer.pug
 
 
