mobile media query applied to login page

--- a/componentes_css/css/componentes/iniciar-sesion.scss
+++ b/componentes_css/css/componentes/iniciar-sesion.scss
@@ -10,6 +10,7 @@ $color-fondo: #21C08B;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 0px 30px;
     min-height: calc(100vh - 200px);
 }
 
