--- a/componentes_css/css/style-iniciar-sesion.scss
+++ b/componentes_css/css/style-iniciar-sesion.scss
@@ -2,3 +2,4 @@
 @import "componentes/header.scss";
 @import "componentes/iniciar-sesion.scss";
 @import "componentes/footer.scss";
+@import "componentes/iniciar-sesion-media-queries.scss";
