--- a/componentes_css/css/style-iniciar-sesion.css
+++ b/componentes_css/css/style-iniciar-sesion.css
@@ -94,6 +94,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  padding: 0px 30px;
   min-height: calc(100vh - 200px);
 }
 
@@ -236,4 +237,23 @@ footer a {
 }
 footer a:hover {
   text-decoration: underline;
+}
+
+@media only screen and (max-width: 600px) {
+  .login__container {
+    padding: 0;
+    border: none;
+    background-color: transparent;
+    width: 100%;
+  }
+
+  footer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
 }
