--- a/componentes_css/pug/maquetacion-principal.pug
+++ b/componentes_css/pug/maquetacion-principal.pug
@@ -51,6 +51,74 @@ html(lang="es")
                         +carousel-details("Description","2019 16+ 114 minutos")
                     .carousel-item
                         +carousel-details("Description","2019 16+ 114 minutos")
+            h2.categories__title Tendencia
+            section.carousel
+                .carousel__container 
+                    .carousel-item
+                        img.carousel-item__img(src="https://images.pexels.com/photos/3404474/pexels-photo-3404474.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="people")
+                        .carousel-item__details
+                            div
+                                img(src="/imagenes/play-icon.png", alt="play")
+                                img(src="/imagenes/plus-icon.png", alt="pause")
+                            p.carousel-item__details--title Título Descriptivo
+                            p.carousel-item__details--subtitle 2019 16+ 114 minutos
+                    .carousel-item
+                        .carousel-item__details
+                            div
+                                img(src="/imagenes/play-icon.png", alt="play")
+                                img(src="/imagenes/plus-icon.png", alt="pause")
+                            p.carousel-item__details--title Título Descriptivo
+                            p.carousel-item__details--subtitle 2019 16+ 114 minutos
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+            h2.categories__title Originales de PlatziVideo
+            section.carousel
+                .carousel__container 
+                    .carousel-item
+                        img.carousel-item__img(src="https://images.pexels.com/photos/3404474/pexels-photo-3404474.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="people")
+                        .carousel-item__details
+                            div
+                                img(src="/imagenes/play-icon.png", alt="play")
+                                img(src="/imagenes/plus-icon.png", alt="pause")
+                            p.carousel-item__details--title Título Descriptivo
+                            p.carousel-item__details--subtitle 2019 16+ 114 minutos
+                    .carousel-item
+                        .carousel-item__details
+                            div
+                                img(src="/imagenes/play-icon.png", alt="play")
+                                img(src="/imagenes/plus-icon.png", alt="pause")
+                            p.carousel-item__details--title Título Descriptivo
+                            p.carousel-item__details--subtitle 2019 16+ 114 minutos
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
+                    .carousel-item
+                        +carousel-details("Description","2019 16+ 114 minutos")
             
         
         include footer.pug
