--- a/componentes_css/css/404.scss
+++ b/componentes_css/css/404.scss
@@ -1,3 +1,4 @@
 @import "componentes/globales.scss";
 @import "componentes/header.scss";
+@import "componentes/style-404.scss";
 @import "componentes/footer.scss";
