--- a/componentes_css/pug/404.pug
+++ b/componentes_css/pug/404.pug
@@ -6,9 +6,9 @@ html(lang="es")
         title Page not Found
     body 
         include header.pug 
-        main 
+        main.main 
             .message
-                h1.notfound.animated 404
-                p.text
+                h1.animated.pulse 404
+                p Página no encontrada
         include footer.pug
 
