--- a/componentes_css/pug/header.pug
+++ b/componentes_css/pug/header.pug
@@ -1,3 +1,3 @@
 header.header 
-    img.header__img(src= "https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png", alt="logo de platzi.com") 
+    img.header__img(tabindex="0", src= "https://raw.githubusercontent.com/platzi/PlatziVideo/feature/react/src/assets/static/logo-platzi-video-BW2.png", alt="logo de platzi.com") 
     
